--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "homepage": "https://hassie54men.github.io/react-typescript",
   "name": "my-react-app-ts",
@@ -14,6 +13,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
